app/assets/stylesheets/navbar/navbar.scss
@import 'main';
@use 'hamburger';

// Navbar

.navbar {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 60px;
  z-index: 1;
  background-color: white;
  border-bottom: 2px solid lightgray;
}

.nav_title_container {
  font-family: 'RobotoTitle', Fallback, sans-serif;
  font-size: 22px;
  font-weight: 500;
  letter-spacing: 0.06em;
  margin: 0px 10px;
  a, a:link, a:visited, a:focus, a:hover, a:active {
    color: black;
    text-decoration: none; 
  }
}

@include respond-to(tablet) {
  .nav_title_container {
    font-size: 28px;
    margin: 0px 15px;
  }
}

@include respond-to(desktop) {
  .nav_title_container {
    font-size: 32px;
    margin: 0px 20px;
  }
}

// Nav sidebar

.nav_menu {
  margin: 0px 10px;
  background-color: white;
}

.nav_item_container {
  display: flex;
  position: fixed;
  top: 62px;
  right: 0px;
  flex-direction: column;
  transition: width 0.25s ease-in-out 0s;
  width: 0px;
  height: 100%;
  background-color: white;
  border-left: 1px solid lightgray;
}

.nav_item_container.sidebar_open {
  width: 180px;
}

.nav_item {
  position: relative;
  width: 100%;
  height: auto;
  overflow: hidden;
  text-align: center;
  vertical-align: middle;
  color: black;
  font-size: 16px;
  font-weight: 450;
  padding: 10px 0px;
}

.nav_item_separator {
  position: relative;
  background-color: lightgrey;
  border-radius: 100%;
  height: 2px;
  width: 100%;
}

@include respond-to(tablet) {
  .nav_item_container.sidebar_open {
    width: 210px;
  }
  .nav_item{
    font-size: 18px;
  }
}

@include respond-to(desktop) {
  .nav_item_container.sidebar_open {
    width: 250px;
  }
  .nav_item{
    font-size: 20px;
  }
}

